<resources>
    <string name="app_name">Couchbase Treasure Hunt</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_username">Username<font fgcolor='#FF0000'>*</font></string>
    <string name="prompt_password">Password<font fgcolor='#FF0000'>*</font></string>
    <string name="prompt_password_confirmation">Confirm Password<font fgcolor='#FF0000'>*</font></string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_connect">Connect</string>
    <string name="user_repo_unavailable">"Local user repository not found"</string>
    <string name="unable_to_update_local_user">"Unable to update local user"</string>
    <string name="existing_account_question">Have you already created an account on this device?</string>
    <string name="new_account_question">New to this device or to the game?</string>
    <string name="pwd_warning">For security, please do not reuse username-password combinations from other systems</string>
    <string name="action_register">Register</string>
    <string name="connect_label">Connect</string>
    <string name="inactive_server_msg">The game server at %1$s is running but not actively serving games</string>
    <string name="prompt_first_name">First Name<font fgcolor='#FF0000'>*</font></string>
    <string name="prompt_last_name">Last Name<font fgcolor='#FF0000'>*</font></string>
    <string name="prompt_email">Email Address<font fgcolor='#FF0000'>*</font></string>
    <string name="prompt_company_name">Company Name</string>
    <string name="marketing_opt_in_request">Please send me information on Couchbase</string>
    <string name="couchbase_logo">Couchbase Logo</string>
    <string name="title_activity_leader">LeaderActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="title_activity_tabbed">MainActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="connected">Connected</string>
    <string name="push_pull_manual">Push-Pull Manual</string>
    <string name="couchbase_replicator_configuration">Couchbase Replicator Configuration</string>
    <string name="sync_direction">Sync Direction</string>
    <string name="push_pull"><![CDATA[Push & Pull]]></string>
    <string name="replication_mode">Replication Mode</string>
    <string name="continuous">Continuous</string>
    <string name="done">Done</string>
    <string name="pull_down">Pull (down)</string>
    <string name="push_up">Push (up)</string>
    <string name="enabled">Enabled</string>
    <string name="show_toasts_for_new_updates">Show Toasts for new updates</string>
    <string name="working">Working"</string>
    <string name="replicator_status">Replicator Status</string>
    <string name="database_updates">Database Updates</string>
    <string name="key">Key</string>
</resources>