<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.replicatorOptions.ReplicatorOptionsActivity">

    <data>

        <import type="android.view.View" />
        <import type="com.couchbase.mobile.mfd.lite.DatabaseWrapper.SyncType" />

        <variable
            name="viewModel"
            type="com.couchbase.mobile.mfd.ui.replicatorOptions.ReplicatorOptionsViewModel" />

    </data>

    <LinearLayout
        android:id="@+id/sync_mode_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/replicator_config_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/couchbase_replicator_configuration"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/sync_direction_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/sync_direction_choice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/sync_direction"
                android:textColor="@color/colorPrimaryDark" />

            <RadioButton
                android:id="@+id/sync_direction_push"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_up"
                android:checked="@{viewModel.getSyncType == SyncType.PUSH}"
                android:onClick="@{()->viewModel.setSyncType(SyncType.PUSH)}"/>

            <RadioButton
                android:id="@+id/sync_direction_pull"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pull_down"
                android:checked="@{viewModel.getSyncType == SyncType.PULL}"
                android:onClick="@{()->viewModel.setSyncType(SyncType.PULL)}"/>


            <RadioButton
                android:id="@+id/sync_direction_both"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_pull"
                android:checked="@{viewModel.getSyncType == SyncType.PUSH_AND_PULL}"
                android:onClick="@{()->viewModel.setSyncType(SyncType.PUSH_AND_PULL)}"/>

        </RadioGroup>

        <TextView
            android:id="@+id/mode_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/replication_mode"
            android:textColor="@color/colorPrimaryDark" />

        <Switch
            android:id="@+id/replication_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continuous"
            android:checked="@={viewModel.continuous}"/>

        <TextView
            android:id="@+id/show_toasts_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/show_toasts_for_new_updates"
            android:textColor="@color/colorPrimaryDark" />

        <Switch
            android:id="@+id/show_toasts_sw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enabled"
            android:checked="@={viewModel.showToasts}"/>

        <Button
            android:id="@+id/set_mode_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/done"
            android:textColor="@color/colorOnBackground"
            android:onClick="submitSettings"/>

    </LinearLayout>


</layout>